# pave

./: .env.example  .gitignore  README.md  pyproject.toml
config/agent/: base.yaml
config/eval/: ops_lite_smoke.yaml
config/model/: base.yaml
scripts/: check_preprocess.py  seed_v3_db.py
src/pave/: __init__.py  agent.py  converters.py  graph.py  output_validator.py  state.py  tools.py  trajectory_logger.py
src/pave/agents/: eval_agent.py
src/pave/config/: __init__.py  schema.py
src/pave/llm/: __init__.py  factory.py
src/pave/prompts/: manager.py
src/pave/prompts/agents/langgraph/: rca.yaml
src/pave/tools_lib/: __init__.py  base.py  langchain_adapter.py  query_parquet_toolkit.py
src/pave/utils/: __init__.py  logger.py  path.py  rate_limiter.py
tests/: test_agent.py
